初始化项目

--- a/全国大学生物联网设计竞赛/初识篇.md
+++ b/全国大学生物联网设计竞赛/初识篇.md
@@ -1,13 +1,37 @@
 # 全国大学生物联网设计竞赛介绍
-## 一、关于全国大学生物联网设计竞赛
-### （一）竞赛官网
-[2024年全国大学生物联网设计竞赛（2024）](竞赛官网链接，需补充完整链接地址)
 
-### （二）基本介绍
-1. **一句话概括**：一项至多四个人参加的实物设计类比赛，要求学生设计并实现融入物联网技术的实物项目，且向评委展示，比赛难度适中。
-2. **初步了解**：参赛需要具备对物联网概念的清晰认知、创新想法、实现想法的工程能力以及表达能力。
-    - **比赛最终呈现形式**：属于实物设计类比赛，最终要做出能实现完整功能的硬件实物。相比市面上成熟商业产品，比赛作品更像“Demo”，较为粗糙。除实物外，还需通过项目答辩展示作品，包括项目PPT路演和线下实物演示。可通过观看相关展示视频感受获奖项目水平，如[全国大学生物联网设计竞赛（华为杯）分赛区二等奖_哔哩哔哩_bilibili](对应视频链接，需补充) 、[全国大学生物联网设计竞赛一等奖！_哔哩哔哩_bilibili](对应视频链接，需补充) 、[全国大学生物联网设计竞赛全国总决赛一等奖云水族项目演示_哔哩哔哩_bilibili](对应视频链接，需补充) 。
-    - **比赛时间线**
+[竞赛官网：2024 年全国大学生物联网设计竞赛 （2024）]([2024 年全国大学生物联网设计竞赛](https://iot.sjtu.edu.cn/Default.aspx))
+
+## 一、基本介绍
+### （一）、一句话概括
+🔥 一项**至多四个人**参加的**实物设计类**比赛，要求学生设计并实现融入**物联网技术**的实物项目，且向评委展示，比赛**难度适中**。
+
+### （二）、初步了解
+✍这个比赛需要大家拥有对物联网概念的清晰认知，接着是创新的想法，然后是实现想法的工程能力，最后是通过将项目完美展示出去的表达能力。为了让大家更深刻地了解这个比赛的面貌，我们通过**Q&A**的形式逐步帮助大家揭开这比赛神秘的面纱~
+
+#### A. 比赛最终以什么样的形式呈现？
+⭐ 物联网设计竞赛属于实物设计类比赛，最终呈现形式是一个能实现完整功能的硬件实物。下面是一些比赛作品的项目实物图，有助于大家感受感受这个比赛大概要做出什么程度的实物出来。
+
+![image-20250303135717837](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303135717837.png)
+
+⭐相比于市面上成熟的商业产品，比赛中呈现的产品往往以一种更加稚嫩的形式展现。市面上的产品相对于比赛作品往往集成度更高，流畅性更强，外观更好看。也就是说，我们打该比赛时所设计出的实物可以**较为粗糙**，更符合“**Demo**”，也就是样品的说法。（`说这一段话的目的主要是让同学们对物联网比赛祛魅，不要误以为这比赛是在做一个和市面上一样强大的产品或想成是一件难如登天的事情`）
+
+------
+
+以下是一些物联网比赛项目的展示视频，同学们可以多花几分钟去感受一下能拿奖的比赛项目大概是什么水平哦~
+[全国大学生物联网设计竞赛（华为杯）分赛区二等奖_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1gh4y1v7vM/?spm_id_from=333.337.search-card.all.click&vd_source=1bdc71be9bf50a17f30e9d13e9682aad)
+[全国大学生物联网设计竞赛一等奖！_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV148411z74W/?spm_id_from=333.337.search-card.all.click&vd_source=1bdc71be9bf50a17f30e9d13e9682aad)
+[全国大学生物联网设计竞赛全国总决赛一等奖云水族项目演示_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1Fo4y147HB/?spm_id_from=333.337.search-card.all.click)
+
+------
+
+⭐ 除了把实物做出来，物联网比赛还需要将所作的作品展现给评委，以下是项目答辩中的现场照片，主要包括两个部分，分别是在一个教室里面用PPT向评委老师们讲解所做项目，以及评委亲自来同学们的实物项目前看你们演示并回答他们的问题~
+
+![image-20250303141929210](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303141929210.png)
+
+#### B. 比赛的时间线是什么？
+比赛的枪声从3月份开始打响，一直到八月下旬结束，我们在下方列出了时间线表格，方便同学查阅~
+
 |时间|赛事安排|
 |---|---|
 |3月|赛事启动，各赛道发布命题与开发资料|
@@ -17,10 +41,108 @@
 |8月初|公布入围分赛区的队伍名单|
 |8月中旬|各分赛区决赛|
 |8月下旬|全国总决赛与六强赛|
-    - **比赛获奖难度**：相对于所有教育部竞赛，获奖难度适中。影响作品名次因素主要有作品质量（实用性、创新性、技术性）和表达效果（PPT路演、线下作品展示） 。
-        - **获奖概率**：计算2023年与2024年参赛队伍等数据可知，入围区域赛后获奖概率极大，且获奖最低为二等奖起步；认真备赛获奖概率大于表格数据；进入全国总决赛保底有两张奖状，有50%左右概率获全国一等奖，大概率为二等奖及以上 。[2023年获奖名单](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20230828/6382880578102673265474365.pdf)、[2024年获奖名单](https://iot.sjtu.edu.cn/show.aspx?info_lb=34&info_id=4038&flag=2)。
-        - **项目指标组成**：项目能否获奖的评价指标涵盖多个方面（见思维导图，需补充图片或详细说明思维导图内容），从零设计开发项目周期约两到四个月，在较好的项目立意、技术实现与表达下，获奖机会大。
-    - **适合参赛的专业**：物联网比赛技术栈广阔，涉及硬件、软件、算法、网络传输等领域，适合多个专业学生参赛，各专业优势如下：
+
+#### C. 比赛获奖难度大不大？
+✅ 一句话来说，相对于所有教育部竞赛，全国大学生物联网设计竞赛获奖**难度适中**
+对于该比赛，影响作品名次的因素主要包括两点：
+
+- **作品质量是否够硬——实用性、创新性、技术性**：这一点主要考量同学们做出来的项目是否有足够的实用价值与现实意义，是否是新颖的，市面上少有涉猎或是没有的，是否有一定的技术难度。（后面会详细教学如何让作品实现这些要求）
+- **表达效果是否出彩——PPT路演、线下作品展示：**这一点主要考察同学们将作品做出来之后如何将所完成的项目准确地传递给评委，如何通过故事来引人入胜，即便面对不同评委也能应答如流。（后面会详细教学故事力的培养与表达训练）
+
+许多实物设计类比赛的关键无异于就是做好上述两点，因为这两点会直接影响评委们对项目的打分~
+
+------
+
+**如果你们：**
+        ✅ 具备天马行空的想象力
+        ✅ 具备团队协作的凝聚力
+        ✅ 具备善于发现的洞察力
+        ✅ 具备路演表达的故事力
+那么你们是绝对适合打全国大学生物联网设计竞赛的，而且获国奖概率较大
+
+------
+
+但如果你们：
+        ❌ 不喜欢调研与思维发散
+        ❌ 团队没善于表达的同学
+        ❌ 对构思项目完全没热情
+        ❌ 对硬件与动手干没兴趣
+那么你们不太适合打全国大学生物联网设计竞赛这种实物设计类比赛，最好更换赛道
+
+------
+
+上面对于该比赛的定性分析，接下来，我们会尝试通过**定量分析**进一步帮助同学们感受比赛难度
+
+**1. 获奖概率**
+☀我们计算了2023年与2024年两年的参赛队伍数量、区域赛入围队伍数以及国赛入围队伍数
+
+|年份|参赛总队伍数|区域赛入围队伍数|国赛入围队伍数|
+|---|---|---|---|
+|2023年|1992|478 （**24.0%**）|164 （**8.2%**）|
+|2024年|3294|637 （**19.3%**）|224 （**6.8%**）|
+
+ ☀我们也计算了2023年与2024年两年全国总决赛一二三等奖和企业创新奖的获取队伍数与比例
+
+|年份|国赛队伍数|三等奖|二等奖|一等奖|企业创新奖|
+|---|---|---|---|---|---|
+|2023|164|32|62|70|12|
+|2024|224|23|84|117|12|
+
+☀同时，我们还为每个分赛区计算了23与24年区域赛一等奖、二等奖以及入围全国总决赛的队伍数
+
+**2023年：**
+
+|赛区|入围数|二等奖|一等(特等)奖|
+|---|---|---|---|
+|华东赛区|130|50|71 (48)|
+|华北赛区|60|24|25 (24)|
+|东北赛区|60|38|20 (20)|
+|西北赛区|106|27|63 (36)|
+|高职组区|无|无|无|
+|华中以及西南分区|122|48|48 (38)|
+
+**2024年：**
+
+|赛区|入围数|二等奖|一等(特等)奖|
+|---|---|---|---|
+|华东赛区|156|57|88 (61)|
+|华北赛区|73|22|34 (32)|
+|东北赛区|75|17|49 (26)|
+|西北赛区|148|44|80 (43)|
+|高职组区|25|2|13 (10)|
+|华中以及西南分区|160|20|128 (55)|
+
+注：从2023年开始，华南赛区并入华东赛区，因此，华南赛区学校获奖包含在华东赛区中
+我们总结了以下结论，请同学们查收~
+
+- **入围区域赛后**，获奖的**概率极大**，而且只要获奖，最低也是**二等奖起步**（名头原因**不设立三等奖**）
+- 大部分作品都会在海选时被淘汰，但这些作品中包含了很多不完善不成熟的项目，这些项目会大大影响最终获奖概率的计算，所以，如果队伍认真打比赛，花精力，**获奖概率是远远大于表格数据**所展示的
+- 只要进入全国总决赛，就**百分百有两张奖状保底**（最差也是区域赛特等奖+全国第三）
+- 只要进入全国总决赛，就有**百分之五十**左右的概率获得**全国一等奖**，极大概率为二等奖及以上
+
+☀两年全国总决赛获奖名单如下，里面包含具体项目名，同学们可以查看获奖项目大概都是做什么的：
+
+[2023全国总决赛获奖名单](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20230828/6382880578102673265474365.pdf)
+
+[2024全国总决赛获奖名单](https://iot.sjtu.edu.cn/show.aspx?info_lb=34&info_id=4038&flag=2)
+
+**2.  项目指标组成**
+☀下面的思维导图是一个项目能否获奖的评价指标，也是评委对项目的重点关注部分：
+
+![image-20250303211746593](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303211746593.png)
+
+注：该指标在目前章节仅作简单介绍使用，后续章节会详细拆解每一个指标的评分组成以及实现方法~
+除去老师或者历届学生的传承等先天因素，从零设计并开发一个项目的周期大概为两到四个月不等。在比较好的项目立意、技术实现与项目表达下，是有很大机会获奖的。
+
+### 比赛适合什么专业的学生？
+✅ 回答这个问题，我们在不涉及复杂术语的前提下，了解这个比赛涉及到什么技术栈的内容~
+物联网比赛的一个特点是技术栈十分广阔，从硬件到软件，从算法到网络传输，都需同学们有所涉猎，我们列出了该比赛所包含的技术栈内容，并会在后续章节详细呈现技术栈之间的联系与应用：
+
+![image-20250303211810090](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303211810090.png)
+
+从图中可以看出，物联网比赛所涉及到的领域实在太多啦。但是这也给了我们一个十分重要的信息：
+适合该比赛的专业也很多
+
 |专业|优势|
 |---|---|
 |自动化/控制科学与工程|嵌入式系统、执行器控制、实时系统|
@@ -35,18 +157,47 @@
 |机械电子工程|智能硬件设计、机电一体化控制|
 |光电信息科学与工程|感知层技术、光学传感器应用及数据采集精度优化|
 
+注：每个学校专业叫法不一样，上述表格只是举例，类似专业也适合参加该比赛，发挥一定的优势
+
 ## 二、其他信息
-### （一）更客观的介绍
-1. **地位**：由中国高等教育学会主办，上海交通大学等知名学校承办，2023年被列入教育部竞赛认可名单，属于A类竞赛，旨在推动物联网技术创新和人才培养。
-2. **趋势**：2014年开始举办（原名为“IT杯”，现也叫“华为杯”），影响力与含金量逐年扩大，参赛学校和队伍数量大幅提升，越来越多公司开设赛道。
+### （一）、更客观的介绍
+**地位：**
+🌙全国大学生物联网设计竞赛是由中国高等教育学会主办，上海交通大学等知名学校承办的全国性学科竞赛，旨在推动物联网技术创新和人才培养。该竞赛在2023年被列入教育部竞赛认可名单，是教育部官方认可的，最具含金量、最具参赛价值的赛事之一，属于**A类**竞赛。
+**趋势：**
+🌙 该竞赛由2014年开始举办（原名为“IT杯”，现在也叫“华为杯”），影响力与含金量逐年扩大。该比赛的参赛学校、队伍数量整体上大幅提升：越来越多的公司纷纷入局，开设赛道。
 
-### （二）参赛好处
-1. **保研加分**：若在学院中加分多，对打算保研的同学有利。
-2. **项目迭代**：可迭代参与大创项目及其他技术赛、商赛，甚至发表论文。
-3. **实习跳板**：表现优异或潜力大的队伍，有机会获得相关企业实习或工作机会。
-4. **视野扩展**：涉及众多技术栈，能提升技术和思维广度，培养本科生必备素养。
+### （二）、参赛好处
+除了丰富简历之外，提高技术水平以外，物联网比赛还有以下好处，尤其是对思维广度的提升
+✅ 保研加分：对于打算保研的同学，如果该赛事在学院中加分比较多，可以考虑参赛获得保研加分
+✅ 项目迭代：能迭代然后参与大创项目与其他实物设计类的技术赛和商赛，甚至发论文，一举多得
+✅ 实习跳板：参赛表现优异或潜力大的队伍，有机会通过该竞赛获取相关企业的实习甚至是工作机会
+✅ 视野扩展：物联网比赛涉及技术栈很多，通过团队设计项目与参考他人项目，在技术和思维广度上有十分巨大的提升，这恰好是本科生的一个必备素养
+### （三）、比赛赛道
+🧢物联网比赛入局了许多企业，设立了许多赛道。每个赛道都与企业本身的发展密切相关。以2024年为例，是一个企业参与物联网竞赛并设立赛道。我们罗列了各赛道命题，如下所示：
 
-### （三）小编推荐指数
+📝[001_2024年全国大学生物联网设计竞赛命题1_华为赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240501/6385018393532854436025264.pdf)
+
+📝[002_2024年全国大学生物联网设计竞赛命题2_安谋赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240328/6384722709120405398624889.pdf)
+
+📝[003_2024年全国大学生物联网设计竞赛命题3_中移物联网赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240327/6384717449708395001878542.pdf)
+
+📝[004_2024年全国大学生物联网设计竞赛命题4_乐鑫科技赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240328/6384722709112310476367460.pdf)
+
+📝[005_2024年全国大学生物联网设计竞赛命题5_霍尼韦尔赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240327/6384717449994626059650954.pdf)
+
+📝[006_2024年全国大学生物联网设计竞赛命题6_连接标准联盟赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240328/6384722709120305428624889.pdf)
+
+📝[007_2024年全国大学生物联网设计竞赛命题7_广和通赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240327/6384717450236875386823956.pdf)
+
+📝[008_2024年全国大学生物联网设计竞赛命题8_TI赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240327/6384717450263657672839581.pdf)
+
+📝[009_2024年全国大学生物联网设计竞赛命题9_地平线赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240327/6384717450570366672613528.pdf)
+
+📝[010_2024年全国大学生物联网设计竞赛命题10_火山引擎赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240327/6384717450660609174055688.pdf)
+
+📝[011_2024年全国大学生物联网设计竞赛命题11_航天科技赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240328/6384722709167818805238393.pdf)
+
+### （四）、小编推荐指数
 ⭐⭐⭐⭐（四颗星）
-1. **优势**：获奖难度不高，项目产出可延续利用，能了解丰富技术栈，培养技术广度与综合能力。
-2. **不足**：相比知名比赛影响力不足，受多种因素影响较大，对团队和项目稳定性有考验，项目周期较长。 
+**优势：**获奖难度不高、且项目产出可以继续迭代参与其他竞赛，甚至产出论文，具有丰富的延续价值，而且全程参与该比赛可以了解到十分丰富的技术栈，在技术广度与综合能力上有很大的培养
+**不足：**相对于一些知名的比赛而言，影响力不足。受天时地利人和影响较大，对团队团结、项目稳定性有一定的考验，而且项目周期较长
