初始化项目

--- a/全国大学生物联网设计竞赛/初识篇.md
+++ b/全国大学生物联网设计竞赛/初识篇.md
@@ -1,11 +1,10 @@
 # 全国大学生物联网设计竞赛介绍
 
-[竞赛官网：2024 年全国大学生物联网设计竞赛 （2024）]([2024 年全国大学生物联网设计竞赛](https://iot.sjtu.edu.cn/Default.aspx))
+[2024年全国大学生物联网设计竞赛官网](https://iot.sjtu.edu.cn/Default.aspx)
 
 ## 一、基本介绍
 ### （一）、一句话概括
 🔥 一项**至多四个人**参加的**实物设计类**比赛，要求学生设计并实现融入**物联网技术**的实物项目，且向评委展示，比赛**难度适中**。
-
 ### （二）、初步了解
 ✍这个比赛需要大家拥有对物联网概念的清晰认知，接着是创新的想法，然后是实现想法的工程能力，最后是通过将项目完美展示出去的表达能力。为了让大家更深刻地了解这个比赛的面貌，我们通过**Q&A**的形式逐步帮助大家揭开这比赛神秘的面纱~
 
@@ -19,8 +18,11 @@
 ------
 
 以下是一些物联网比赛项目的展示视频，同学们可以多花几分钟去感受一下能拿奖的比赛项目大概是什么水平哦~
+
 [全国大学生物联网设计竞赛（华为杯）分赛区二等奖_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1gh4y1v7vM/?spm_id_from=333.337.search-card.all.click&vd_source=1bdc71be9bf50a17f30e9d13e9682aad)
+
 [全国大学生物联网设计竞赛一等奖！_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV148411z74W/?spm_id_from=333.337.search-card.all.click&vd_source=1bdc71be9bf50a17f30e9d13e9682aad)
+
 [全国大学生物联网设计竞赛全国总决赛一等奖云水族项目演示_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1Fo4y147HB/?spm_id_from=333.337.search-card.all.click)
 
 ------
@@ -54,26 +56,37 @@
 ------
 
 **如果你们：**
+
         ✅ 具备天马行空的想象力
+
         ✅ 具备团队协作的凝聚力
+
         ✅ 具备善于发现的洞察力
+
         ✅ 具备路演表达的故事力
+
 那么你们是绝对适合打全国大学生物联网设计竞赛的，而且获国奖概率较大
 
 ------
 
-但如果你们：
+**但如果你们：**
+
         ❌ 不喜欢调研与思维发散
+
         ❌ 团队没善于表达的同学
+
         ❌ 对构思项目完全没热情
+
         ❌ 对硬件与动手干没兴趣
+
 那么你们不太适合打全国大学生物联网设计竞赛这种实物设计类比赛，最好更换赛道
 
 ------
 
-上面对于该比赛的定性分析，接下来，我们会尝试通过**定量分析**进一步帮助同学们感受比赛难度
+上面是对于该比赛的定性分析，接下来，我们会尝试通过**定量分析**进一步帮助同学们感受比赛难度
 
 **1. 获奖概率**
+
 ☀我们计算了2023年与2024年两年的参赛队伍数量、区域赛入围队伍数以及国赛入围队伍数
 
 |年份|参赛总队伍数|区域赛入围队伍数|国赛入围队伍数|
@@ -127,6 +140,7 @@
 [2024全国总决赛获奖名单](https://iot.sjtu.edu.cn/show.aspx?info_lb=34&info_id=4038&flag=2)
 
 **2.  项目指标组成**
+
 ☀下面的思维导图是一个项目能否获奖的评价指标，也是评委对项目的重点关注部分：
 
 ![image-20250303211746593](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303211746593.png)
@@ -162,15 +176,22 @@
 ## 二、其他信息
 ### （一）、更客观的介绍
 **地位：**
+
 🌙全国大学生物联网设计竞赛是由中国高等教育学会主办，上海交通大学等知名学校承办的全国性学科竞赛，旨在推动物联网技术创新和人才培养。该竞赛在2023年被列入教育部竞赛认可名单，是教育部官方认可的，最具含金量、最具参赛价值的赛事之一，属于**A类**竞赛。
+
 **趋势：**
+
 🌙 该竞赛由2014年开始举办（原名为“IT杯”，现在也叫“华为杯”），影响力与含金量逐年扩大。该比赛的参赛学校、队伍数量整体上大幅提升：越来越多的公司纷纷入局，开设赛道。
 
 ### （二）、参赛好处
-除了丰富简历之外，提高技术水平以外，物联网比赛还有以下好处，尤其是对思维广度的提升
+除了丰富简历之外，提高技术水平以外，物联网比赛还有以下好处，尤其是对思维广度的提升：
+
 ✅ 保研加分：对于打算保研的同学，如果该赛事在学院中加分比较多，可以考虑参赛获得保研加分
+
 ✅ 项目迭代：能迭代然后参与大创项目与其他实物设计类的技术赛和商赛，甚至发论文，一举多得
+
 ✅ 实习跳板：参赛表现优异或潜力大的队伍，有机会通过该竞赛获取相关企业的实习甚至是工作机会
+
 ✅ 视野扩展：物联网比赛涉及技术栈很多，通过团队设计项目与参考他人项目，在技术和思维广度上有十分巨大的提升，这恰好是本科生的一个必备素养
 ### （三）、比赛赛道
 🧢物联网比赛入局了许多企业，设立了许多赛道。每个赛道都与企业本身的发展密切相关。以2024年为例，是一个企业参与物联网竞赛并设立赛道。我们罗列了各赛道命题，如下所示：
