初始化项目

--- a/全国大学生物联网设计竞赛/初识篇.md
+++ b/全国大学生物联网设计竞赛/初识篇.md
@@ -46,6 +46,7 @@
 
 #### C. 比赛获奖难度大不大？
 ✅ 一句话来说，相对于所有教育部竞赛，全国大学生物联网设计竞赛获奖**难度适中**
+
 对于该比赛，影响作品名次的因素主要包括两点：
 
 - **作品质量是否够硬——实用性、创新性、技术性**：这一点主要考量同学们做出来的项目是否有足够的实用价值与现实意义，是否是新颖的，市面上少有涉猎或是没有的，是否有一定的技术难度。（后面会详细教学如何让作品实现这些要求）
@@ -126,6 +127,7 @@
 |华中以及西南分区|160|20|128 (55)|
 
 注：从2023年开始，华南赛区并入华东赛区，因此，华南赛区学校获奖包含在华东赛区中
+
 我们总结了以下结论，请同学们查收~
 
 - **入围区域赛后**，获奖的**概率极大**，而且只要获奖，最低也是**二等奖起步**（名头原因**不设立三等奖**）
@@ -146,16 +148,17 @@
 ![image-20250303211746593](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303211746593.png)
 
 注：该指标在目前章节仅作简单介绍使用，后续章节会详细拆解每一个指标的评分组成以及实现方法~
+
 除去老师或者历届学生的传承等先天因素，从零设计并开发一个项目的周期大概为两到四个月不等。在比较好的项目立意、技术实现与项目表达下，是有很大机会获奖的。
 
 ### 比赛适合什么专业的学生？
 ✅ 回答这个问题，我们在不涉及复杂术语的前提下，了解这个比赛涉及到什么技术栈的内容~
+
 物联网比赛的一个特点是技术栈十分广阔，从硬件到软件，从算法到网络传输，都需同学们有所涉猎，我们列出了该比赛所包含的技术栈内容，并会在后续章节详细呈现技术栈之间的联系与应用：
 
 ![image-20250303211810090](https://gitee.com/Kivykiwi/66666/raw/master/image-20250303211810090.png)
 
-从图中可以看出，物联网比赛所涉及到的领域实在太多啦。但是这也给了我们一个十分重要的信息：
-适合该比赛的专业也很多
+从图中可以看出，物联网比赛所涉及到的领域实在太多啦。但是这也给了我们一个十分重要的信息，即适合该比赛的专业也很多
 
 |专业|优势|
 |---|---|
