--- a/全国大学生物联网设计竞赛/初识篇.md
+++ b/全国大学生物联网设计竞赛/初识篇.md
@@ -2,10 +2,10 @@
 
 [2024年全国大学生物联网设计竞赛官网](https://iot.sjtu.edu.cn/Default.aspx)
 
-## 一、基本介绍
-### （一）、一句话概括
+## 一 基本介绍
+### （一）一句话概括
 🔥 一项**至多四个人**参加的**实物设计类**比赛，要求学生设计并实现融入**物联网技术**的实物项目，且向评委展示，比赛**难度适中**。
-### （二）、初步了解
+### （二） 初步了解
 ✍这个比赛需要大家拥有对物联网概念的清晰认知，接着是创新的想法，然后是实现想法的工程能力，最后是通过将项目完美展示出去的表达能力。为了让大家更深刻地了解这个比赛的面貌，我们通过**Q&A**的形式逐步帮助大家揭开这比赛神秘的面纱~
 
 #### A. 比赛最终以什么样的形式呈现？
@@ -37,7 +37,7 @@
 |时间|赛事安排|
 |---|---|
 |3月|赛事启动，各赛道发布命题与开发资料|
-|4 - 6月|组队报名，6月填写报名表（含赛道选择、作品简介、技术实现，技术实现不纳入评分）|
+|4 - 6月|组队报名，6月填写报名表（含赛道选择 作品简介 技术实现，技术实现不纳入评分）|
 |5 - 6月|各赛道进行线上讲解，全国各地开展线下讲座|
 |7月中 - 下旬|提交作品设计文档与实物演示视频|
 |8月初|公布入围分赛区的队伍名单|
@@ -49,8 +49,8 @@
 
 对于该比赛，影响作品名次的因素主要包括两点：
 
-- **作品质量是否够硬——实用性、创新性、技术性**：这一点主要考量同学们做出来的项目是否有足够的实用价值与现实意义，是否是新颖的，市面上少有涉猎或是没有的，是否有一定的技术难度。（后面会详细教学如何让作品实现这些要求）
-- **表达效果是否出彩——PPT路演、线下作品展示：**这一点主要考察同学们将作品做出来之后如何将所完成的项目准确地传递给评委，如何通过故事来引人入胜，即便面对不同评委也能应答如流。（后面会详细教学故事力的培养与表达训练）
+- **作品质量是否够硬——实用性 创新性 技术性**：这一点主要考量同学们做出来的项目是否有足够的实用价值与现实意义，是否是新颖的，市面上少有涉猎或是没有的，是否有一定的技术难度。（后面会详细教学如何让作品实现这些要求）
+- **表达效果是否出彩——PPT路演 线下作品展示：**这一点主要考察同学们将作品做出来之后如何将所完成的项目准确地传递给评委，如何通过故事来引人入胜，即便面对不同评委也能应答如流。（后面会详细教学故事力的培养与表达训练）
 
 许多实物设计类比赛的关键无异于就是做好上述两点，因为这两点会直接影响评委们对项目的打分~
 
@@ -82,7 +82,7 @@
 
 **1. 获奖概率**
 
-☀我们计算了2023年与2024年两年的参赛队伍数量、区域赛入围队伍数以及国赛入围队伍数
+☀我们计算了2023年与2024年两年的参赛队伍数量 区域赛入围队伍数以及国赛入围队伍数
 
 |年份|参赛总队伍数|区域赛入围队伍数|国赛入围队伍数|
 |---|---|---|---|
@@ -96,7 +96,7 @@
 |2023|164|32|62|70|12|
 |2024|224|23|84|117|12|
 
-☀同时，我们还为每个分赛区计算了23与24年区域赛一等奖、二等奖以及入围全国总决赛的队伍数
+☀同时，我们还为每个分赛区计算了23与24年区域赛一等奖 二等奖以及入围全国总决赛的队伍数
 
 **2023年：**
 
@@ -143,7 +143,7 @@
 
 注：该指标在目前章节仅作简单介绍使用，后续章节会详细拆解每一个指标的评分组成以及实现方法~
 
-除去老师或者历届学生的传承等先天因素，从零设计并开发一个项目的周期大概为两到四个月不等。在比较好的项目立意、技术实现与项目表达下，是有很大机会获奖的。
+除去老师或者历届学生的传承等先天因素，从零设计并开发一个项目的周期大概为两到四个月不等。在比较好的项目立意 技术实现与项目表达下，是有很大机会获奖的。
 
 ### 比赛适合什么专业的学生？
 ✅ 回答这个问题，我们在不涉及复杂术语的前提下，了解这个比赛涉及到什么技术栈的内容~
@@ -156,31 +156,31 @@
 
 |专业|优势|
 |---|---|
-|自动化/控制科学与工程|嵌入式系统、执行器控制、实时系统|
-|计算机科学与技术|软件开发（前后端、算法）、数据存储与分析|
+|自动化/控制科学与工程|嵌入式系统 执行器控制 实时系统|
+|计算机科学与技术|软件开发（前后端 算法） 数据存储与分析|
 |物联网工程|全栈技术覆盖，软硬件结合|
-|电子信息工程|电路设计、传感器与通信协议开发|
-|通信工程|网络协议设计、无线通信技术优化|
-|软件工程|云平台开发、系统架构设计|
-|人工智能/数据科学|数据分析、机器学习模型部署|
-|电气工程及其自动化|工业物联网（IIoT）、电力系统集成|
-|测控技术与仪器|高精度传感器开发、数据采集优化|
-|机械电子工程|智能硬件设计、机电一体化控制|
-|光电信息科学与工程|感知层技术、光学传感器应用及数据采集精度优化|
+|电子信息工程|电路设计 传感器与通信协议开发|
+|通信工程|网络协议设计 无线通信技术优化|
+|软件工程|云平台开发 系统架构设计|
+|人工智能/数据科学|数据分析 机器学习模型部署|
+|电气工程及其自动化|工业物联网（IIoT） 电力系统集成|
+|测控技术与仪器|高精度传感器开发 数据采集优化|
+|机械电子工程|智能硬件设计 机电一体化控制|
+|光电信息科学与工程|感知层技术 光学传感器应用及数据采集精度优化|
 
 注：每个学校专业叫法不一样，上述表格只是举例，类似专业也适合参加该比赛，发挥一定的优势
 
-## 二、其他信息
-### （一）、更客观的介绍
+## 二 其他信息
+### （一） 更客观的介绍
 **地位：**
 
-🌙全国大学生物联网设计竞赛是由中国高等教育学会主办，上海交通大学等知名学校承办的全国性学科竞赛，旨在推动物联网技术创新和人才培养。该竞赛在2023年被列入教育部竞赛认可名单，是教育部官方认可的，最具含金量、最具参赛价值的赛事之一，属于**A类**竞赛。
+🌙全国大学生物联网设计竞赛是由中国高等教育学会主办，上海交通大学等知名学校承办的全国性学科竞赛，旨在推动物联网技术创新和人才培养。该竞赛在2023年被列入教育部竞赛认可名单，是教育部官方认可的，最具含金量 最具参赛价值的赛事之一，属于**A类**竞赛。
 
 **趋势：**
 
-🌙 该竞赛由2014年开始举办（原名为“IT杯”，现在也叫“华为杯”），影响力与含金量逐年扩大。该比赛的参赛学校、队伍数量整体上大幅提升：越来越多的公司纷纷入局，开设赛道。
+🌙 该竞赛由2014年开始举办（原名为“IT杯”，现在也叫“华为杯”），影响力与含金量逐年扩大。该比赛的参赛学校 队伍数量整体上大幅提升：越来越多的公司纷纷入局，开设赛道。
 
-### （二）、参赛好处
+### （二） 参赛好处
 除了丰富简历之外，提高技术水平以外，物联网比赛还有以下好处，尤其是对思维广度的提升：
 
 ✅ 保研加分：对于打算保研的同学，如果该赛事在学院中加分比较多，可以考虑参赛获得保研加分
@@ -190,7 +190,7 @@
 ✅ 实习跳板：参赛表现优异或潜力大的队伍，有机会通过该竞赛获取相关企业的实习甚至是工作机会
 
 ✅ 视野扩展：物联网比赛涉及技术栈很多，通过团队设计项目与参考他人项目，在技术和思维广度上有十分巨大的提升，这恰好是本科生的一个必备素养
-### （三）、比赛赛道
+### （三） 比赛赛道
 🧢物联网比赛入局了许多企业，设立了许多赛道。每个赛道都与企业本身的发展密切相关。以2024年为例，是一个企业参与物联网竞赛并设立赛道。我们罗列了各赛道命题，如下所示：
 
 📝[001_2024年全国大学生物联网设计竞赛命题1_华为赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240501/6385018393532854436025264.pdf)
@@ -215,9 +215,9 @@
 
 📝[011_2024年全国大学生物联网设计竞赛命题11_航天科技赛道.pdf](https://iot.sjtu.edu.cn/ueditor/net/upload/file/20240328/6384722709167818805238393.pdf)
 
-### （四）、小编推荐指数
+### （四） 小编推荐指数
 ⭐⭐⭐⭐（四颗星）
 
-**优势：**获奖难度不高、且项目产出可以继续迭代参与其他竞赛，甚至产出论文，具有丰富的延续价值，而且全程参与该比赛可以了解到十分丰富的技术栈，在技术广度与综合能力上有很大的培养
+**优势：**获奖难度不高 且项目产出可以继续迭代参与其他竞赛，甚至产出论文，具有丰富的延续价值，而且全程参与该比赛可以了解到十分丰富的技术栈，在技术广度与综合能力上有很大的培养
 
-**不足：**相对于一些知名的比赛而言，影响力不足。受天时地利人和影响较大，对团队团结、项目稳定性有一定的考验，而且项目周期较长
+**不足：**相对于一些知名的比赛而言，影响力不足。受天时地利人和影响较大，对团队团结 项目稳定性有一定的考验，而且项目周期较长
