--- a/睿抗机器人开发者大赛(RAICOM)/算法调优赛道/国家一等奖/比赛方案.md
+++ b/睿抗机器人开发者大赛(RAICOM)/算法调优赛道/国家一等奖/比赛方案.md
@@ -32,7 +32,7 @@ pip install torch torchvision scikit-learn pillow tqdm
 - 3060以上显卡
 - 至少16GB内存（训练时）
 
-## 数据增强策略
+## 🏋️ 数据增强策略
 | 增强类型                | 参数设置                     |
 |-----------------------|---------------------------|
 | 随机裁剪                | 224x224 (缩放0.8-1.0)       |
@@ -58,12 +58,12 @@ pip install torch torchvision scikit-learn pillow tqdm
 | Batch Size          | 32        |
 | Epochs              | 25        |
 
-## 使用方法
+## 📝 使用方法
 1. 准备数据集（按上述结构组织）
 2. 运行Jupyter训练脚本
 3. 训练完成后会生成模型文件
 
-## 注意事项
+## ⚠️ 注意事项
 1. 首次运行会自动创建训练集/测试集目录
 2. 修改`data_dir`路径需同步调整数据集结构
 3. 随机增强参数可能导致不同设备间结果微小差异
