初始化项目

--- a/全国大学生物联网设计竞赛/华为赛道/认识物联网.md
+++ b/全国大学生物联网设计竞赛/华为赛道/认识物联网.md
@@ -12,7 +12,7 @@
 
 ------
 
-## **会呼吸的阳台**：物联网盆栽养成记
+## 会呼吸的阳台：物联网盆栽养成记
 
 小艾盯着办公桌上第三盆死去的仙人掌，叶片上的褐斑像在嘲笑她的努力。同事李姐端着咖啡凑过来："要不去楼下花店问问？他们新到了批塑料盆栽，浇开水都不会死。"
 
@@ -99,7 +99,7 @@
 
 ### 故事中的物联网流程图
 
-![image-20250312110249819](https://gitee.com/Kivykiwi/66666/raw/master/image-20250312110249819.png)
+<img src="https://gitee.com/Kivykiwi/66666/raw/master/image-20250312110249819.png" alt="image-20250312110249819" style="zoom: 67%;" />
 
 ------
 
@@ -115,15 +115,15 @@
 
 在这个例子中
 
-***眼睛**和**摄像头**是对应的，都是**感受数据**的部分，类比于物联网中的**感知层***
+**眼睛**和**摄像头**是对应的，都是**感受数据**的部分，类比于物联网中的**感知层**
 
-***神经元**和**网络**是对应的，都是**传输数据**的部分，类比于物联网中的**网络层***
+**神经元**和**网络**是对应的，都是**传输数据**的部分，类比于物联网中的**网络层**
 
-***大脑**和**云平台**是对应的，都是**处理数据**的部分，类比于物联网中的**平台层***
+**大脑**和**云平台**是对应的，都是**处理数据**的部分，类比于物联网中的**平台层**
 
-***嘴巴**和**手机**也是对应的，都算**展示信息**的部分，类比于物联网中的**应用层***
+**嘴巴**和**手机**也是对应的，都算**展示信息**的部分，类比于物联网中的**应用层**
 
-![image-20250312110447309](https://gitee.com/Kivykiwi/66666/raw/master/image-20250312110447309.png)
+<img src="https://gitee.com/Kivykiwi/66666/raw/master/image-20250312110447309.png" alt="image-20250312110447309" style="zoom:67%;" />
 
 ------
 
